JEDIT 4.0 VERSION HISTORY

* Version 4.0pre2

+ New Features

- MacOS plugin bundled (Kris Kopicki)
  - jEdit exits cleanly when Command+Q is pressed
  - Files created or associated with jEdit can now be opened from the
    Finder by double-clicking on them, or dragging them to the jEdit
    icon
  - jEdit is assigned as the creator of new files

+ Enhancements

- Icon added to 'BeanShell Error' dialog box
- Updated PV-WAVE mode (Ed Stewart)
- Closing a docked window now returns focus to the text area
- Memory indicator tooltip now shows used and total Java heap memory in
  kilobytes
- Updated Transact-SQL mode (Ollie Rutherfurd)
- Updated Omnimark mode (Lionel Fiol)
- Option for search and replace to beep on auto wrap (Kenrick Drew)
- Faster (in theory anyway) file loading as a side effect of some bug
  fixes
- Improved help viewer welcome screen
- Updated QuickNotepad sample plugin for jEdit 4.0 API changes (John
  Gellene)

+ Bug Fixes

- Fixed a memory leak with the search and replace dialog box
- Undo would be broken after a file was reloaded
- Fixed exception thrown if a buffer contained definitions for integer
  properties (tab size, maximum line length, ...)
- Changing the gutter font didn't update the gutter width
- Fixed broken scrolling behavior
- Some files would open with only one line visible
- MiscUtilities.compareStrings() would throw exceptions with strings
  that contained embedded numbers larger than 2^31
- Creating a new view or splitting the view didn't work
- Tool bar tooltips were broken
- With the Windows look and feel, file names were invisible in the file
  system browser
- In the help viewer, the top-level user's guide link was broken

* Version 4.0pre1

+ New Features

- New document model uses less memory, loads files faster, and has a
  simpler API for developers. Also, finally, the file modification flag
  is cleared when all edits up to a save are undone
- New folding features: